@@ -1,3 +1,5 @@
+added more spacing between the headers and the message on html messages.
+
 added an icon for Pooka, and made it change icons when new messages come in.
 	BUG:    the Pooka icon doesn't look great when it's made very small,
 		and the new message icon is just perfunctory.  should get
